[package]
name = "autofy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.1.1"
base64 = "0.22.1"
reqwest = { version = "0.12.5", features = ["json"] }
rspotify = "0.13.2"
serde = "1.0.203"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["macros"]}
tokio-macros = "2.3.0"
